Fix the issue of the ripple overflowing its container

--- a/src/components/c-icon-button/c-icon-button.scss
+++ b/src/components/c-icon-button/c-icon-button.scss
@@ -157,6 +157,7 @@ svg {
   border-radius: 50%;
   overflow: hidden;
   position: relative;
+  transform: translateZ(0);
   width: 100%;
 }
 
